--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </header>
 
-    <section id="aluno" class="bg-light-yellow">
+    <section id="aluno" class="bg-light-blue">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -108,7 +108,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h2 class="text-center" class="section-heading">Contatos</h2>
+            <h2 class="text-center black" class="section-heading">Contatos</h2>
             <hr class="light">
           </div>
             <div class="col-sm-12">
